Improve PROG compilation and add better simple code

--- a/prog/simple/Makefile
+++ b/prog/simple/Makefile
@@ -1,4 +1,4 @@
 PSRC := prog/simple/
 
 $(B)/code_$(PROG).out: $(PSRC)/code.c $(PSRC)/code.S
-	clang -O2 -target riscv32 -march=rv32i -nostdlib $(PSRC)/code.c $(PSRC)/code.S -o $@
+	clang -O2 -fPIE -target riscv32 -march=rv32i -nostdlib $(PSRC)/code.S $(PSRC)/code.c -o $@
