--- a/src/cpu/microcode/code.toml
+++ b/src/cpu/microcode/code.toml
@@ -6,6 +6,8 @@ alu_compare_unsigned = { default = "X", width = 1 }
 pc_mode = { default = "00", width = 2 }
 is_store = { default = "0", width = 1 }
 is_load = { default = "0", width = 1 }
+mul_mux = { default = "X", width = 1 }
+mul_extend = { default = "XX", width = 2 }
 
 [lui]
 encoding = "xxx_01101"
@@ -112,3 +114,40 @@ encoding = "xxx_01000"
 
 [[store.code]]
 is_store = "1"
+
+[mul]
+encoding = "000_11101" # Remapped opcode from OP-VE
+
+[[mul.code]]
+will_write = "1"
+write_mux = "110"
+mul_mux = "0"
+
+[mulh]
+encoding = "001_11101" # Remapped opcode from OP-VE
+
+[[mulh.code]]
+will_write = "1"
+write_mux = "110"
+mul_mux = "1"
+mul_extend = "11"
+
+[mulhsu]
+encoding = "010_11101" # Remapped opcode from OP-VE
+
+[[mulhsu.code]]
+will_write = "1"
+write_mux = "110"
+mul_mux = "1"
+mul_extend = "01"
+
+[mulhu]
+encoding = "011_11101" # Remapped opcode from OP-VE
+
+[[mulhu.code]]
+will_write = "1"
+write_mux = "110"
+mul_mux = "1"
+mul_extend = "00"
+
+
