cpu: Support unsigned division

--- a/prog/rvtests/Makefile
+++ b/prog/rvtests/Makefile
@@ -6,7 +6,8 @@ RVTESTS ?= rv32ui/lui rv32ui/auipc rv32ui/jal rv32ui/jalr \
 					 rv32ui/slli rv32ui/srli rv32ui/srai \
 					 rv32ui/add rv32ui/sub rv32ui/sll rv32ui/slt rv32ui/sltu rv32ui/xor rv32ui/or rv32ui/and \
 					 rv32ui/srl rv32ui/sra \
-					 rv32um/mul rv32um/mulh rv32um/mulhsu rv32um/mulhu
+					 rv32um/mul rv32um/mulh rv32um/mulhsu rv32um/mulhu \
+					 rv32um/remu rv32um/divu
 
 PSRC := prog/rvtests
 RVTEST_SRC := $(PSRC)/dep/riscv-tests/
