--- a/src/cpu/Makefile
+++ b/src/cpu/Makefile
@@ -1,6 +1,6 @@
 $(shell mkdir -p $(B)/cpu)
 
-CPU_SRC := src/cpu/cpu.sv src/cpu/alu.sv src/cpu/shifter.sv src/cpu/regfile.sv
+CPU_SRC := src/cpu/cpu.sv src/cpu/alu.sv src/cpu/shifter.sv src/cpu/regfile.sv src/cpu/divider.sv
 CPU_MICROCODE_COMPILER_BLD := $(B)/cpu/microcode_compiler_bld
 CPU_MICROCODE_COMPILER := $(CPU_MICROCODE_COMPILER_BLD)/debug/microcode-compiler
 
