--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,4 +1,4 @@
 SIM_CORE := sim/prom.sv sim/mult.sv sim/dpx9b.sv sim/dpb.sv
-SIM := $(SIM_CORE) sim/dut.sv sim/sim_uart.sv sim/main.cpp
+SIM := $(SIM_CORE) sim/dut.sv sim/sim_uart.sv sim/main.cpp sim/display.cpp
 
 SIM_EXE := $(B)/soc_verilated
