fpga: Add HDMI output

--- a/fpga/Makefile
+++ b/fpga/Makefile
@@ -1,2 +1,2 @@
-FPGA_SRC := fpga/top.sv
+FPGA_SRC := fpga/top.sv fpga/dvi.sv fpga/pll480.sv fpga/sync.sv fpga/tdms_channel.sv
 FPGA_CST := fpga/tangnano9k.cst
