--- a/src/lsio/Makefile
+++ b/src/lsio/Makefile
@@ -1,1 +1,1 @@
-LSIO_SRC := src/lsio/lsio.sv src/lsio/uart.sv src/lsio/timer.sv src/lsio/btn.sv
+LSIO_SRC := src/lsio/lsio.sv src/lsio/uart.sv src/lsio/timer.sv src/lsio/btn.sv src/lsio/err.sv
