cpu: fix rvtests
Add fence instructions as vlid to microcode so rvtests pass.

--- a/src/cpu/microcode/code.toml
+++ b/src/cpu/microcode/code.toml
@@ -221,3 +221,9 @@ valid_ins = "1"
 will_write = "1"
 write_mux = "011"
 div_mux = "11"
+
+[fence] # Fence must be valid
+encoding = "00x_00011"
+
+[[fence.code]]
+valid_ins = "1"
